updated meta tags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Irhaye Elvis</title>
-    <link rel="apple-touch-icon" href="assets/icons/icn1.PNG">
-    <link rel="shortcut icon" href="assets/icons/icn1.PNG" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/icons/pfp.jpg">
+    <link rel="shortcut icon" href="assets/icons/pfp.jpg" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/responsive.css">
