fixed typography and iconography, updated links and back end

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="Descrition" content="Hey there, I'm Elvis, a software developer who delivers sites and visuals that look sharp, run fast, and tell a clear story.">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#000">
+    <meta name="keywords" content="Elvis Irhaye, Elvis, Irhaye, Web Developer, Graphic Designer, Photographer, Portfolio, Software Developer, UI Designer">
 
     <!-- meta card -->
     <meta property="og:title" content="Elvis Irhaye">
@@ -88,70 +89,72 @@
     <br><br><br>
 
     <!-- about section -->
-    <div class="about" id="about">
-        <div class="heading">
-            <h1>&cir; Who I Am</h1>
-        </div>
-        <div class="article">
-            <p>
-                Hey there, I'm Elvis, a multidisciplinary web developer and graphic designer who loves turning bold ideas into clean, high‑performance digital experiences.
-            </p>
-            <br><hr><br>
-            <p>
-                Code is my main canvas, and I work fluently in HTML, CSS, JavaScript, and modern frameworks to craft interfaces that feel <b>fast, fluid, and future‑proof</b>.
-            </p>
-            <br><hr><br>
-            <p>   
-                Design isn’t an afterthought—it’s baked into my workflow from the first wireframe to the final pixel, so every animation, hover state, and transition serves a purpose and reinforces the brand story.
-            </p>
-        </div>
-    </div>
-    
-    <div class="skills" id="skill">
-        <div class="heading">
-            <h1>&cir; My Skills</h1>
-        </div>
-        <div class="measure">
-            <div class="character">
-                <p>HTML 5 - 88%</p>
+    <section class="merge">
+        <div class="about" id="about">
+            <div class="heading">
+                <h1>&cir; Who I Am</h1>
             </div>
-            <div class="scale">
-                <div class="scale-measure" id="html"></div>
+            <div class="article">
+                <p>
+                    Hey there, I'm Elvis, a multidisciplinary web developer and graphic designer who loves turning bold ideas into clean,   high‑performance digital experiences.
+                </p>
+                <br><hr><br>
+                <p>
+                    Code is my main canvas, and I work fluently in HTML, CSS, JavaScript, and modern frameworks to craft interfaces that    feel <b>fast, fluid, and future‑proof</b>.
+                </p>
+                <br><hr><br>
+                <p>   
+                    Design isn’t an afterthought—it’s baked into my workflow from the first wireframe to the final pixel, so every  animation, hover state, and transition serves a purpose and reinforces the brand story.
+                </p>
             </div>
         </div>
-        <div class="measure">
-            <div class="character">
-                <p>CSS 3 - 94%</p>
+
+        <div class="skills" id="skill">
+            <div class="heading">
+                <h1>&cir; My Skills</h1>
             </div>
-            <div class="scale">
-                <div class="scale-measure" id="css"></div>
+            <div class="measure">
+                <div class="character">
+                    <p><img src="assets/icons/skill-ico/html-124-svgrepo-com.svg" alt=""> HTML - 88%</p>
+                </div>
+                <div class="scale">
+                    <div class="scale-measure" id="html"></div>
+                </div>
+            </div>
+            <div class="measure">
+                <div class="character">
+                    <p><img src="assets/icons/skill-ico/css3-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/tailwind-svgrepo-com.svg" alt=""> CSS - 88%</p>
+                </div>
+                <div class="scale">
+                    <div class="scale-measure" id="css"></div>
+                </div>
+            </div>
+            <div class="measure">
+                <div class="character">
+                    <p><img src="assets/icons/skill-ico/node-16-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/react-logo-programming-svgrepo-com.svg" alt=""> JavaScript - 54%</p>
+                </div>
+                <div class="scale">
+                    <div class="scale-measure" id="js"></div>
+                </div>
+            </div>
+            <div class="measure">
+                <div class="character">
+                    <p><img src="assets/icons/skill-ico/git-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/github-142-svgrepo-com.svg" alt=""> Git - 70%</p>
+                </div>
+                <div class="scale">
+                    <div class="scale-measure" id="git"></div>
+                </div>
+            </div>
+            <div class="measure">
+                <div class="character">
+                    <p><img src="assets/icons/skill-ico/terminal-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/windows-174-svgrepo-com.svg" alt=""> Batch - 45%</p>
+                </div>
+                <div class="scale">
+                    <div class="scale-measure" id="bat"></div>
+                </div>
             </div>
         </div>
-        <div class="measure">
-            <div class="character">
-                <p>JavaScript - 54%</p>
-            </div>
-            <div class="scale">
-                <div class="scale-measure" id="js"></div>
-            </div>
-        </div>
-        <div class="measure">
-            <div class="character">
-                <p>Git - 70%</p>
-            </div>
-            <div class="scale">
-                <div class="scale-measure" id="git"></div>
-            </div>
-        </div>
-        <div class="measure">
-            <div class="character">
-                <p>Batch - 45%</p>
-            </div>
-            <div class="scale">
-                <div class="scale-measure" id="bat"></div>
-            </div>
-        </div>
-    </div>
+    </section>
     
     <div class="project" id="project">
         <div class="heading">
@@ -238,10 +241,10 @@
             <a href="https://x.com/irhayeElvis">
                 <img src="assets/icons/twitter-154-svgrepo-com.svg" alt="twitter/x">
             </a>
-            <a href="">
+            <a href="https://instagram.com/irhayeelvis">
                 <img src="assets/icons/instagram-svgrepo-com.svg" alt="">
             </a>
-            <a href="">
+            <a href="https://wa.me/+2348160575048">
                 <img src="assets/icons/whatsapp-whats-app-svgrepo-com.svg" alt="">
             </a>
         </div>
