Update skill descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="hero-section" id="home">
         <div class="header">
             <div class="pfp">
-                <img src="assets/images/pfp.jpg" alt="">
+                <img src="assets/images/pfp.JPG" alt="">
             </div>
             <div class="text">
                 <div>
@@ -115,7 +115,7 @@
             </div>
             <div class="measure">
                 <div class="character">
-                    <p><img src="assets/icons/skill-ico/html-124-svgrepo-com.svg" alt=""> HTML - 99%</p>
+                    <p><img src="assets/icons/skill-ico/html-124-svgrepo-com.svg" alt=""> HTML </p>
                 </div>
                 <div class="scale">
                     <div class="scale-measure" id="html"></div>
@@ -123,7 +123,7 @@
             </div>
             <div class="measure">
                 <div class="character">
-                    <p><img src="assets/icons/skill-ico/css3-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/tailwind-svgrepo-com.svg" alt=""> CSS - 94%</p>
+                    <p><img src="assets/icons/skill-ico/css3-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/tailwind-svgrepo-com.svg" alt=""> CSS/Tailwind </p>
                 </div>
                 <div class="scale">
                     <div class="scale-measure" id="css"></div>
@@ -131,7 +131,7 @@
             </div>
             <div class="measure">
                 <div class="character">
-                    <p><img src="assets/icons/skill-ico/node-16-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/react-logo-programming-svgrepo-com.svg" alt=""> JavaScript - 85%</p>
+                    <p><img src="assets/icons/skill-ico/node-16-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/react-logo-programming-svgrepo-com.svg" alt=""> JavaScript/Node </p>
                 </div>
                 <div class="scale">
                     <div class="scale-measure" id="js"></div>
@@ -139,7 +139,7 @@
             </div>
             <div class="measure">
                 <div class="character">
-                    <p><img src="assets/icons/skill-ico/git-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/github-142-svgrepo-com.svg" alt=""> Git - 70%</p>
+                    <p><img src="assets/icons/skill-ico/git-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/github-142-svgrepo-com.svg" alt=""> Git/Linux </p>
                 </div>
                 <div class="scale">
                     <div class="scale-measure" id="git"></div>
@@ -147,7 +147,7 @@
             </div>
             <div class="measure">
                 <div class="character">
-                    <p><img src="assets/icons/skill-ico/terminal-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/windows-174-svgrepo-com.svg" alt=""> Batch - 45%</p>
+                    <p><img src="assets/icons/skill-ico/terminal-svgrepo-com.svg" alt=""> <img src="assets/icons/skill-ico/windows-174-svgrepo-com.svg" alt=""> Batch/Terminal </p>
                 </div>
                 <div class="scale">
                     <div class="scale-measure" id="bat"></div>
