--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             </div>
             <div class="article">
                 <p>
-                   Hey there, I'm Elvis, a multidisciplinary software engineer, backend developer and UI designer who loves turning bold ideas into clean, high‑performance digital experiences.
+                   Hey there, I'm Elvis, a self-taught software engineer, backend developer and UI developer who is driven by deep passion and obssession for technology while turning bold ideas into clean, high‑performance digital experiences.
                 </p>
                 <br><hr><br>
                 <p>
-                    Code is my main canvas, and I work fluently in CSS, JavaScript, and modern frameworks to craft interfaces that feel <b>fast, fluid, and future‑proof</b>.
+                    Code is my main canvas, and I work fluently in CSS, Rust, JavaScript, and modern frameworks to craft interfaces (user or programming interfaces) that feel <b>fast, fluid, and future‑proof</b>.
                 </p>
                 <br><hr><br>
                 <p>   
@@ -158,7 +158,7 @@
     
     <div class="project" id="project">
         <div class="heading">
-            <h1>&cir; Recent Contracts </h1>
+            <h1>&cir; Recent Contracts</h1>
         </div>
         <br><br>
         <div class="work">
@@ -224,7 +224,7 @@
     </div>
 
     <footer>
-        <p style="font-family: monospace;">&copy; 2026 Lvis.Dev All Rights Reserved</p>
+        <p style="font-family: monospace;">&copy; 2026 Elvis Irhaye</p>
     </footer>
     
     <script src="assets/script.js"></script>
