--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <br><br>
         <div class="work">
             <h1><a href="https://www.aaronoteze.com">
-                aaronoteze.com
+                Aaron Oteze
             </a></h1>
             <div class="work-img">
                 <img src="assets/images/aar1.jpeg" alt="Dochuma Academy">
@@ -183,7 +183,7 @@
         <br>
         <div class="work">
             <h1><a href="https://dochuma-academy.vercel.app">
-                dochuma.com
+                Dochuma Academy
             </a></h1>
             <div class="work-img">
                 <img src="assets/images/doc1.jpeg" alt="Dochuma Academy">
@@ -192,7 +192,7 @@
             </div>
             <div class="work-txt">
                 <p>
-                    A smooth landing page designed to retain visitor's attention and improve engagement
+                    A smooth landing page for an organization designed to retain visitor's attention and improve engagement
                 </p>
             </div>
         </div>
